remove the guest time sync request on successful sync or when a timeout is reached
