# staging/src/kubevirt.io/client-go/api/v1/types_swagger_generated.go
@@ -97,6 +97,7 @@ func (VirtualMachineInstanceMigrationState) SwaggerDoc() map[string]string {
 		"abortRequested":                 "Indicates that the migration has been requested to abort",
 		"abortStatus":                    "Indicates the final status of the live migration abortion",
 		"migrationUid":                   "The VirtualMachineInstanceMigration object associated with this migration",
+		"guestTimeSyncRequired":          "Indicates that VMI Guest time sync is required",
 	}
 }
 
